--- a/plugins/roadmap/scripts/roadmap-widget/src/style/_roadmap-variables.scss
+++ b/plugins/roadmap/scripts/roadmap-widget/src/style/_roadmap-variables.scss
@@ -25,8 +25,9 @@ $task-milestone-width: 23px;
 $task-milestone-height: 23px;
 $time-unit-height: 28px;
 $time-unit-width: 100px;
-$today-pin-head-size: 7px;
 $today-pin-shaft-size: 1px;
+$today-pin-head-size: 7px;
+$today-pin-head-empty-room: $today-pin-head-size + 2px;
 $iteration-height: 24px;
 $z-index-ribbon-iterations: 1;
 $z-index-dependencies: 2;
